fix financial report data flow